# wasi-tests

./: Cargo.toml  build.rs  rust-toolchain.toml
crates/bins/: Cargo.toml
crates/preview1/: Cargo.toml
crates/toml/: Cargo.toml
crates/toml/src/: lib.rs
tests/: all.rs
